Update API, update a lot of tiles to use CapabilityHelper rather than manually returning caps.